--- a/repository/index.html
+++ b/repository/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="window-target" content="_top" />
   
   
-  <title>Repositories | Jason.Yang的博客</title>
+  <title>Repositories | 杨雨庚的博客</title>
   <meta name="description" content="杨雨庚的博客--点滴成长">
 <meta name="keywords" content="杨雨庚的博客">
 <meta property="og:type" content="website">
